<resources>
    <string name="app_name">NYTimesSearch</string>
    <string name="activity_name">Search</string>
    <string name="action_settings">Settings</string>
    <string name="hint">Enter Search Query</string>
    <string name="search">Search</string>
    <string name="title_activity_article">ArticleActivity</string>
    <string name="begin_date">Begin Date</string>
    <string name="sort_order">Sort Order</string>
    <string name="news_desk">News Desk Values</string>
    <string name="checktextview_arts">Arts</string>
    <string name="checktextview_fashion"><![CDATA[Fashion & Style]]></string>
    <string name="checktextview_sports">Sports</string>
    <string name="save_button">Save</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="end_date">End Date</string>
    <string name="share">share</string>
</resources>
