<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvBeginDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/begin_date"/>

    <TextView
        android:id="@+id/tvSortOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/dpBegin"
        android:layout_marginTop="64dp"
        android:text="@string/sort_order"/>

    <Spinner
        android:id="@+id/spSortOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dpBegin"
        android:layout_alignStart="@+id/dpBegin"
        android:layout_alignTop="@+id/tvSortOrder"
        android:spinnerMode="dropdown"/>

    <TextView
        android:id="@+id/tvNewsDesk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/spSortOrder"
        android:text="@string/news_desk"/>

    <CheckBox
        android:id="@+id/cbArts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spSortOrder"
        android:layout_toEndOf="@+id/tvNewsDesk"
        android:layout_toRightOf="@+id/tvNewsDesk"
        android:checked="false"
        android:text="@string/checktextview_arts"/>

    <CheckBox
        android:id="@+id/cbFashion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvNewsDesk"
        android:layout_toEndOf="@+id/tvNewsDesk"
        android:layout_toRightOf="@+id/tvNewsDesk"
        android:checked="false"
        android:text="@string/checktextview_fashion"/>

    <CheckBox
        android:id="@+id/cbSports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cbFashion"
        android:layout_alignStart="@+id/cbFashion"
        android:layout_below="@+id/cbFashion"
        android:checked="false"
        android:text="@string/checktextview_sports"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cbSports"
        android:layout_centerHorizontal="true"
        android:text="@string/save_button"/>

    <DatePicker
        android:id="@+id/dpBegin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/tvBeginDate"
        android:layout_toRightOf="@+id/tvBeginDate"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"/>

    <TextView
        android:id="@+id/tvEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/dpBegin"
        android:text="@string/end_date"/>

    <DatePicker
        android:id="@+id/dpEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dpBegin"
        android:layout_toEndOf="@+id/tvEndDate"
        android:layout_toRightOf="@+id/tvEndDate"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"/>
</RelativeLayout>


